[package]
name = "prediction-market"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-web-actors = "4"

tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

log = "0.4"
env_logger = "0.11"

uuid = { version = "1", features = ["v4"] }
futures-util = "0.3.32"
actix-ws = "0.4.0"